--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,4 @@
-imports_granularity="crate"
+imports_granularity="Crate"
 group_imports="StdExternalCrate"
+reorder_imports=true
 unstable_features=true
